# faculty-hours-gateway

./: README.md  main.py  pyproject.toml  settings.py
.docker/: Dockerfile  docker-compose.yml
.kube/faculty-hours-gateway-chart/: Chart.yaml  values.yaml
.kube/faculty-hours-gateway-chart/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
.kube/faculty-hours-gateway-chart/templates/tests/: test-connection.yaml
API/Routers/: auth.py
gateway/: main.py  settings.py
gateway/routers/: auth.py  blocking.py  faculty.py  payrolls.py  planer.py  report.py  schedule.py
gateway/schemas/: payrolls.py
gateway/tests/: test_faculty.py  test_get_teacher.py  test_report.py
templates/: index.html  profile.html
