[tool.poetry]
name = "fh-gateway"
version = "0.1.0"
description = "api gateway with auth0"
authors = ["Adam <adamjawor@gmail.com>"]
readme = "README.md"
packages = [{include = "fh_gateway"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
PyJWT = "^2.8.0"
python-dotenv = "^1.0.1"
pre-commit = "^3.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
